implemented commands and db (placeholders)

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ archivesBaseName = FancyParticles
 systemProp.kotlinVersion = 1.5.21
 fabricKotlinVersion = 1.6.3+kotlin.1.5.21
 configurationVersion = 1.0.5
+databaseVersion = 1.0.0
