--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ kotlin.code.style = official
 org.gradle.jvmargs = -Xmx1G
 org.gradle.warning.mode = all
 # Spigot
-spigotVersion = 1.18-R0.1-SNAPSHOT
+spigotVersion = 1.18.1-R0.1-SNAPSHOT
 # Mod Properties
 modVersion = 1.0.1
 mavenGroup = it.pureorigins
@@ -10,5 +10,4 @@ archivesBaseName = FancyParticles
 # Kotlin
 systemProp.kotlinVersion = 1.6.10
 # Dependencies
-configurationVersion = 1.0.8
-databaseVersion = 1.0.2
+commonVersion = 1.0.0
